log
Wed 20 Mar 2024 07:23:01 PM UTC: 
 exercises.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:57:13: error: implicit declaration of function ‘destroy_list’ [-Werror=implicit-function-declaration]
   57 |             destroy_list(L); // Liberar la memoria de la lista
      |             ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b3c2141
Wed 20 Mar 2024 07:23:15 PM UTC: 
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:57:13: error: implicit declaration of function ‘destroy_list’ [-Werror=implicit-function-declaration]
   57 |             destroy_list(L); // Liberar la memoria de la lista
      |             ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f8d69b6
Wed 20 Mar 2024 07:24:18 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
cd7da6a
Wed 20 Mar 2024 07:25:46 PM UTC: 
 exercises.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  1|4
total_score: 10/70
6fc0a62
Wed 20 Mar 2024 07:27:18 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
7577bc7
Wed 20 Mar 2024 07:41:27 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
test.c: In function ‘test_elimina_elemento’:
test.c:132:5: error: implicit declaration of function ‘eliminaElementos’; did you mean ‘test_elimina_elemento’? [-Werror=implicit-function-declaration]
  132 |     eliminaElementos(L, elem);
      |     ^~~~~~~~~~~~~~~~
      |     test_elimina_elemento
cc1: all warnings being treated as errors
Compilation failed
7a6f449
Wed 20 Mar 2024 07:57:52 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|3
total_score: 20/70
87f63a6
Wed 20 Mar 2024 07:58:57 PM UTC: 
 exercises.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:111:13: error: implicit declaration of function ‘is_empty’ [-Werror=implicit-function-declaration]
  111 |     while (!is_empty(P1)) {
      |             ^~~~~~~~
exercises.c:121:5: error: implicit declaration of function ‘destroy_stack’ [-Werror=implicit-function-declaration]
  121 |     destroy_stack(auxiliar);
      |     ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4583714
Wed 20 Mar 2024 08:02:04 PM UTC: 
 exercises.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:112:12: error: implicit declaration of function ‘peek’ [-Werror=implicit-function-declaration]
  112 |     while (peek(P1) != NULL) {
      |            ^~~~
exercises.c:112:21: error: comparison between pointer and integer [-Werror]
  112 |     while (peek(P1) != NULL) {
      |                     ^~
exercises.c:117:27: error: comparison between pointer and integer [-Werror]
  117 |     while (peek(auxiliar) != NULL) {
      |                           ^~
cc1: all warnings being treated as errors
Compilation failed
22e57c5
Wed 20 Mar 2024 08:02:53 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:112:13: error: implicit declaration of function ‘is_empty_stack’ [-Werror=implicit-function-declaration]
  112 |     while (!is_empty_stack(P1)) {
      |             ^~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7ca7169
Wed 20 Mar 2024 08:05:13 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
7ca7169
